# robot-differential-wrist

./: .gitmodules  CMakeLists.txt
components/diff_speed_ctrl/: CMakeLists.txt
components/diff_speed_ctrl/include/: diff_speed_ctrl.h
components/diff_speed_ctrl/src/: diff_speed_ctrl.c
components/tb6612/: CMakeLists.txt
components/tb6612/include/: tb6612.h
components/tb6612/src/: tb6612.c
include/: config.h  wrist.h
main/: CMakeLists.txt  esp32_serial_transport.c  esp32_serial_transport.h  home.c  home.h  main.c
